属性欄の追加

--- a/tougi.html
+++ b/tougi.html
@@ -131,6 +131,16 @@
             flex-direction: column;
             align-items: center;
         }
+
+        .element_label {
+            font-size: 14px;
+            display: inline-block;
+            width: 8em;
+        }
+
+        .element_level_input {
+            width: 4em;
+        }
     </style>
 </head>
 
@@ -183,6 +193,19 @@
                         required></div>
                 <div><label for="player1_mobility">機動力: </label><input type="number" id="player1_mobility" value="4"
                         required></div>
+                <div><span class="element_label">属性</span></div>
+                <select id="player1_element" name="player1_element">
+                    <option value="火">火</option>
+                    <option value="水">水</option>
+                    <option value="土">土</option>
+                    <option value="風">風</option>
+                    <option value="光">光</option>
+                    <option value="闇">闇</option>
+                    <option value="無">無</option>
+                    <option value="-" selected>-</option>
+                </select>
+                <input type="number" class="element_level_input" id="player1_element_level" value="1" min="1" max="3"
+                    required>
                 <div><span class="range_label">通常攻撃射程：</span></div>
                 <div class="range_container">
                     <div class="range_item">
@@ -254,6 +277,19 @@
                         required></div>
                 <div><label for="player2_mobility">機動力: </label><input type="number" id="player2_mobility" value="4"
                         required></div>
+                <div><span class="element_label">属性</span></div>
+                <select id="player2_element" name="player2_element">
+                    <option value="火">火</option>
+                    <option value="水">水</option>
+                    <option value="土">土</option>
+                    <option value="風">風</option>
+                    <option value="光">光</option>
+                    <option value="闇">闇</option>
+                    <option value="無">無</option>
+                    <option value="-" selected>-</option>
+                </select>
+                <input type="number" class="element_level_input" id="player2_element_level" value="1" min="1" max="3"
+                    required>
                 <div><span class="range_label">通常攻撃射程：</span></div>
                 <div class="range_container">
                     <div class="range_item">
@@ -356,7 +392,7 @@
         };
 
         class Character {
-            constructor(name, hp, ap, mainAttack, subAttack, speed, critical, fumble, drama, hit, evasion, defense, resistance, mobility, compatibleRange) {
+            constructor(name, hp, ap, mainAttack, subAttack, speed, critical, fumble, drama, hit, evasion, defense, resistance, mobility, element, elementLevel, compatibleRange) {
                 this.name = name;
                 this.initialHp = hp;
                 this.hp = hp;
@@ -372,6 +408,10 @@
                 this.defense = defense;
                 this.resistance = resistance;
                 this.mobility = mobility;
+                this.element = element;
+                this.elementLevel = elementLevel;
+                this.compatibleRange = compatibleRange;
+
                 this.alive = true;
                 this.passed = false;
                 this.actionPoints = 0;
@@ -381,7 +421,6 @@
                 this.damageScoreForJudge = 0;
                 this.judgePoints = 0;
                 this.nextAction = null;
-                this.compatibleRange = compatibleRange;
                 this.rangeHitFix;
             }
 
@@ -772,6 +811,8 @@
                 parseInt(document.getElementById('player1_defense').value),
                 parseInt(document.getElementById('player1_resistance').value),
                 parseInt(document.getElementById('player1_mobility').value),
+                document.getElementById('player1_element').value,
+                parseInt(document.getElementById('player1_element_level').value),
                 {
                     0: document.getElementById('player1_attack_range_check_0').checked,
                     1: document.getElementById('player1_attack_range_check_1').checked,
@@ -796,6 +837,8 @@
                 parseInt(document.getElementById('player2_defense').value),
                 parseInt(document.getElementById('player2_resistance').value),
                 parseInt(document.getElementById('player2_mobility').value),
+                document.getElementById('player2_element').value,
+                parseInt(document.getElementById('player2_element_level').value),
                 {
                     0: document.getElementById('player2_attack_range_check_0').checked,
                     1: document.getElementById('player2_attack_range_check_1').checked,
@@ -1125,6 +1168,8 @@
                 defense: parseInt(document.getElementById(`${playerId}_defense`).value),
                 resistance: parseInt(document.getElementById(`${playerId}_resistance`).value),
                 mobility: parseInt(document.getElementById(`${playerId}_mobility`).value),
+                element: document.getElementById(`${playerId}_element`).value,
+                elementLevel: parseInt(document.getElementById(`${playerId}_element_level`).value),
                 attackRangeChecks: {
                     0: document.getElementById(`${playerId}_attack_range_check_0`).checked,
                     1: document.getElementById(`${playerId}_attack_range_check_1`).checked,
@@ -1170,6 +1215,8 @@
             document.getElementById(`${playerId}_defense`).value = parsedData.defense;
             document.getElementById(`${playerId}_resistance`).value = parsedData.resistance;
             document.getElementById(`${playerId}_mobility`).value = parsedData.mobility;
+            document.getElementById(`${playerId}_element`).value = parsedData.element;
+            document.getElementById(`${playerId}_element_level`).value = parsedData.elementLevel;
             document.getElementById(`${playerId}_attack_range_check_0`).checked = parsedData.attackRangeChecks[0];
             document.getElementById(`${playerId}_attack_range_check_1`).checked = parsedData.attackRangeChecks[1];
             document.getElementById(`${playerId}_attack_range_check_2`).checked = parsedData.attackRangeChecks[2];
