--- a/tougi.html
+++ b/tougi.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="ja">
 
 <head>
@@ -8,55 +7,61 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 20px;
+            margin: 10px;
         }
 
         h1 {
-            text-align: center;
+            text-align: left;
         }
 
         form {
-            margin-bottom: 20px;
+            margin-bottom: 5px;
         }
 
         label {
             font-size: 14px;
             display: inline-block;
-            width: 120px;
+            width: 100px;
             /* ラベルの幅を統一 */
         }
 
         input {
-            margin-bottom: 10px;
+            margin-bottom: 5px;
             font-size: 14px;
-            width: 150px;
+            width: 100px;
             /* 入力ボックスの幅を統一 */
+        }
+
+        button[type="button"] {
+            margin-bottom: 2px;  /* ボタン間の余白を5pxに調整 */
+        }
+
+        button[type="button"]:first-of-type {
+            margin-top: 2px;  /* 最初のボタン（セーブボタン）の上に余白を追加 */
         }
 
         #container {
             display: flex;
-            justify-content: space-between;
-            max-width: 1200px;
-            margin: 0 auto;
+            justify-content: flex-start;  /* 左寄せ */
+            width: 100%;  /* コンテナの幅を100%に設定 */
+            margin: 0;  /* 自動的に中央寄せにされないように */
+            gap: 10px;  /* プレイヤー1とプレイヤー2のフォーム、バトルログの間にスペース */
         }
 
         .player_form {
-            width: 45%;
+            width: 250px;  /* プレイヤーのフォームの幅 */
+            margin-right: 3px;  /* プレイヤー1とプレイヤー2のフォームの間にスペース */
         }
 
-        .player_form div {
-            margin-bottom: 10px;
+        #battle_log_container {
+            display: flex;
+            flex-direction: column;  /* 縦並びにする */
+            width: 600px;  /* バトルログの幅 */
         }
 
-        #button {
-            padding: 10px 20px;
-            font-size: 16px;
-            margin: 20px auto;
-            display: block;
-        }
-
-        #result {
-            margin-top: 20px;
+        #battle_log_container h2 {
+            font-size: 20px;  /* タイトルのフォントサイズ */
+            margin-bottom: 10px;  /* タイトルとバトルログ間のスペース */
         }
 
         #battle_log {
@@ -65,25 +70,22 @@
             background-color: #f0f0f0;
             padding: 10px;
             border: 1px solid #ccc;
-            height: 400px;
-            /* ログ画面の高さを増加 */
+            height: 600px;  /* ログ画面の高さ */
             overflow-y: scroll;
-            width: 100%;
-            /* 幅を調整 */
-            font-size: 14px;
-            /* フォントサイズを少し大きく */
+            font-size: 14px;  /* フォントサイズ */
         }
+
 
         #checkbox_container {
             display: inline-flex;
-            align-items: center;
+            align-items: left;
             font-size: 16px;
             cursor: pointer;
         }
 
         #checkbox_container label {
             display: flex;
-            align-items: center;
+            align-items: left;
             padding: 5px 10px;
             border-radius: 5px;
             transition: background-color 0.2s, box-shadow 0.2s;
@@ -109,7 +111,7 @@
 
         .range_container label {
             display: flex;
-            align-items: center;
+            align-items: left;
             padding: 5px 5px 0px 5px;
             width: 1em;
         }
@@ -121,7 +123,7 @@
         .range_container {
             display: flex;
             justify-content: left;
-            align-items: center;
+            align-items: left;
             gap: 10px;
             height: 3em;
         }
@@ -129,7 +131,7 @@
         .range_item {
             display: flex;
             flex-direction: column;
-            align-items: center;
+            align-items: left;
         }
 
         .element_label {
@@ -315,7 +317,11 @@
                 </div>
             </form>
         </div>
+    <div id="battle_log_container">
+        <h2>バトルログ</h2>
+        <div id="battle_log"></div>
     </div>
+</div>
 
     <div id="initial_range_meter_container"><label for="initial_range_meter">開始時距離(m): </label><input type="number"
             id="initial_range_meter" min="0" value="30" required>
@@ -332,9 +338,6 @@
 
     <h2>バトル結果</h2>
     <div id="result"></div>
-
-    <h2>バトルログ</h2>
-    <div id="battle_log"></div>
     <script>
         let rangeMeter;
 
