再微調整&ファンブル時、クリティカル時の表示を変更

--- a/tougi.html
+++ b/tougi.html
@@ -34,11 +34,11 @@
         }
 
         button[type="button"] {
-            margin-bottom: 3px;  /* ボタン間の余白を3pxに調整 */
+            margin-bottom: 5px;  /* ボタン間の余白を5pxに調整 */
         }
 
-        button[type="button"]:first-of-type {
-            margin-top: 3px;  /* 最初のボタン（セーブボタン）の上に余白を追加 */
+        select {
+            margin-bottom: 5px;  /* 5pxの余白を追加 */
         }
 
         #container {
