--- a/tougi.html
+++ b/tougi.html
@@ -712,12 +712,14 @@
                     log(`\n${this.name}が攻撃！ 命中判定: ${hitChance} (命中ダイス: ${roll}, 命中: ${this.hit})`);
                 }
                 
-                if (!attackFumble && evasionRoll <= target.fumble) {
-                    log(`${target.name}の回避判定:ファンブル!! (回避ダイス: ${evasionRoll}, 回避: ${target.evasion})`);
-                } else if (evasionRoll >= 100 - target.critical) {
-                    log(`${target.name}の回避判定:クリティカル!! (回避ダイス: ${evasionRoll}, 回避: ${target.evasion})`);
-                } else {
-                    log(`${target.name}の回避判定: ${finalEvasion} (回避ダイス: ${evasionRoll}, 回避: ${target.evasion})`);
+                if (!attackFumble) {
+                    if (evasionRoll <= target.fumble) {
+                        log(`${target.name}の回避判定:ファンブル!! (回避ダイス: ${evasionRoll}, 回避: ${target.evasion})`);
+                    } else if (evasionRoll >= 100 - target.critical) {
+                        log(`${target.name}の回避判定:クリティカル!! (回避ダイス: ${evasionRoll}, 回避: ${target.evasion})`);
+                    } else {
+                        log(`${target.name}の回避判定: ${finalEvasion} (回避ダイス: ${evasionRoll}, 回避: ${target.evasion})`);
+                    }
                 }
 
                 // ④ 命中判定と回避判定を比較
