--- a/tougi.html
+++ b/tougi.html
@@ -34,35 +34,47 @@
         }
 
         button[type="button"] {
-            margin-bottom: 5px;  /* ボタン間の余白を5pxに調整 */
+            margin-bottom: 5px;
+            /* ボタン間の余白を5pxに調整 */
         }
 
         select {
-            margin-bottom: 5px;  /* 5pxの余白を追加 */
+            margin-bottom: 5px;
+            /* 5pxの余白を追加 */
         }
 
         #container {
             display: flex;
-            justify-content: flex-start;  /* 左寄せ */
-            width: 100%;  /* コンテナの幅を100%に設定 */
-            margin: 0;  /* 自動的に中央寄せにされないように */
-            gap: 10px;  /* プレイヤー1とプレイヤー2のフォーム、バトルログの間にスペース */
+            justify-content: flex-start;
+            /* 左寄せ */
+            width: 100%;
+            /* コンテナの幅を100%に設定 */
+            margin: 0;
+            /* 自動的に中央寄せにされないように */
+            gap: 10px;
+            /* プレイヤー1とプレイヤー2のフォーム、バトルログの間にスペース */
         }
 
         .player_form {
-            width: 250px;  /* プレイヤーのフォームの幅 */
-            margin-right: 3px;  /* プレイヤー1とプレイヤー2のフォームの間にスペース */
+            width: 250px;
+            /* プレイヤーのフォームの幅 */
+            margin-right: 3px;
+            /* プレイヤー1とプレイヤー2のフォームの間にスペース */
         }
 
         #battle_log_container {
             display: flex;
-            flex-direction: column;  /* 縦並びにする */
-            width: 630px;  /* バトルログの幅 */
+            flex-direction: column;
+            /* 縦並びにする */
+            width: 630px;
+            /* バトルログの幅 */
         }
 
         #battle_log_container h2 {
-            font-size: 20px;  /* タイトルのフォントサイズ */
-            margin-bottom: 10px;  /* タイトルとバトルログ間のスペース */
+            font-size: 20px;
+            /* タイトルのフォントサイズ */
+            margin-bottom: 10px;
+            /* タイトルとバトルログ間のスペース */
         }
 
         #battle_log {
@@ -71,9 +83,11 @@
             background-color: #f0f0f0;
             padding: 10px;
             border: 1px solid #ccc;
-            height: 600px;  /* ログ画面の高さ */
+            height: 600px;
+            /* ログ画面の高さ */
             overflow-y: scroll;
-            font-size: 14px;  /* フォントサイズ */
+            font-size: 14px;
+            /* フォントサイズ */
         }
 
 
@@ -318,11 +332,11 @@
                 </div>
             </form>
         </div>
-    <div id="battle_log_container">
-        <h2>バトルログ</h2>
-        <div id="battle_log"></div>
+        <div id="battle_log_container">
+            <h2>バトルログ</h2>
+            <div id="battle_log"></div>
+        </div>
     </div>
-</div>
 
     <div id="initial_range_meter_container"><label for="initial_range_meter">開始時距離(m): </label><input type="number"
             id="initial_range_meter" min="0" value="30" required>
@@ -395,6 +409,12 @@
             SMASH_HIT: 5,
         };
 
+        // valueがn以上m以下であるならtrue、違うならfalseを返す
+        // console.log(isInRange(5, 1, 10));  // true (5は1以上10以下)
+        function isInRange(value, n, m) {
+            return value >= n && value <= m;
+        }
+
         class Character {
             constructor(name, hp, ap, mainAttack, subAttack, speed, critical, fumble, drama, hit, evasion, defense, resistance, mobility, element, elementLevel, compatibleRange) {
                 this.name = name;
@@ -433,11 +453,35 @@
 
                 this.takeDamagePreProcess(judgeHitDegree);
 
-                if (!defenceFumble) {
-                    let defenseChance = Math.random() * 100;
-                    if (defenseChance >= (100 - this.defense) && defenseChance > this.fumble) {
-                        damage *= 0.3;
-                        log(`${this.name}は防御技術でダメージを軽減しました！`);
+                if (this.defense >= 0) {
+                    if (!defenceFumble) {
+                        let defenseChance = Math.random() * 100;
+                        if (defenseChance >= (100 - this.defense) && defenseChance > this.fumble) {
+                            damage *= 0.3;
+                            log(`${this.name}は防御技術でダメージを軽減しました！`);
+                        }
+                    }
+                } else {
+                    switch (true) {
+                        case isInRange(this.defense, -10, -1): {
+                            damage *= 1.2;
+                            break;
+                        }
+                        case isInRange(this.defense, -20, -11): {
+                            damage *= 1.4;
+                            break;
+                        }
+                        case isInRange(this.defense, -30, -21): {
+                            damage *= 1.6;
+                            break;
+                        }
+                        case isInRange(this.defense, -40, -31): {
+                            damage *= 1.8;
+                            break;
+                        }
+                        default: {
+                            damage *= 2;
+                        }
                     }
                 }
 
@@ -712,7 +756,7 @@
                 } else {
                     log(`\n${this.name}が攻撃！ 命中判定: ${hitChance} (命中ダイス: ${roll}, 命中: ${this.hit})`);
                 }
-                
+
                 if (evasionRoll <= target.fumble) {
                     log(`${target.name}の回避判定:ファンブル!! (回避ダイス: ${evasionRoll}, 回避: ${target.evasion})`);
                 } else if (evasionRoll >= 100 - target.critical) {
