コメント修正

--- a/tougi.html
+++ b/tougi.html
@@ -504,8 +504,9 @@
                     // 特殊抵抗がマイナスである場合BSの耐性を所持していた場合でも、その耐性は無効化されBSの効果が発動します。。
                     // HP増量系の付与効果をブレイク時、付与されていたHP分が消滅します。（自然な時間経過で付与効果が消えた場合はHPは減りません）
 
-                    // 表記が揺れているが、一旦25刻みで悪化する方向で処理している
-                    // 追ってpppで要検証
+                    // 25刻みと50刻みで表記が揺れているが、
+                    // pppの記述を確認したところロスアカ以降にあたっての表記揺れと判明
+                    // 一旦25刻みで悪化する方向で処理している
 
                     let resistanceChance = Math.random() * 100;
                     if (resistanceChance >= (100 - this.resistance + 100)) {
