ダメージ系BS処理を端的化
とりあえず動くようにはしました

--- a/tougi.html
+++ b/tougi.html
@@ -418,8 +418,49 @@
 
                 this.badStatus = {
                     curse: { remainingTurns: 0, recovery: false }, // 呪いの状態
-                    poisonA: { remainingTurns: 0, recovery: false }, // 毒の状態
-                    poisonB: { remainingTurns: 0, recovery: false }, // 猛毒の状態
+                    poisonA: { remainingTurns: 0, recovery: false, damage: { percentage: 0.01, minDamage: 50, maxDamage: 200 }, bsname: '毒' }, // 毒の状態
+                    poisonB: { remainingTurns: 0, recovery: false, damage: { percentage: 0.02, minDamage: 100, maxDamage: 400 }, bsname: '猛毒' }, // 猛毒の状態
+                    poisonC: { remainingTurns: 0, recovery: false, damage: { percentage: 0.03, minDamage: 150, maxDamage: 600 }, bsname: '致死毒' }, // 致死毒の状態
+                    fireA: { remainingTurns: 0, recovery: false, damage: { percentage: 0.01, minDamage: 50, maxDamage: 200 }, bsname: '火炎' },  //火炎の状態
+                    fireB: { remainingTurns: 0, recovery: false, damage: { percentage: 0.02, minDamage: 100, maxDamage: 400 }, bsname: '業炎' }, //業炎の状態
+                    fireC: { remainingTurns: 0, recovery: false, damage: { percentage: 0.03, minDamage: 150, maxDamage: 600 }, bsname: '炎獄' }, //獄炎の状態
+                    friezeA: { remainingTurns: 0, recovery: false }, //凍結の状態
+                    friezeB: { remainingTurns: 0, recovery: false }, //氷結の状態
+                    friezeC: { remainingTurns: 0, recovery: false }, //氷漬の状態
+                    shockA: { remainingTurns: 0, recovery: false }, //痺れの状態
+                    shockB: { remainingTurns: 0, recovery: false }, //ショックの状態
+                    shockC: { remainingTurns: 0, recovery: false }, //感電の状態
+                    disorderA: { remainingTurns: 0, recovery: false }, //乱れの状態
+                    disorderB: { remainingTurns: 0, recovery: false }, //崩れの状態
+                    disorderC: { remainingTurns: 0, recovery: false }, //体勢不利の状態
+                    bleedingA: { remainingTurns: 0, recovery: false, damage: { percentage: 0, minDamage: 100, maxDamage: 100 }, bsname: '出血' },
+                    bleedingB: { remainingTurns: 0, recovery: false, damage: { percentage: 0, minDamage: 200, maxDamage: 200 }, bsname: '流血' },
+                    bleedingC: { remainingTurns: 0, recovery: false, damage: { percentage: 0, minDamage: 300, maxDamage: 300 }, bsname: '失血' },
+                    suffocationA: { remainingTurns: 0, recovery: false }, //窒息の状態
+                    suffocationB: { remainingTurns: 0, recovery: false }, //苦鳴の状態
+                    suffocationC: { remainingTurns: 0, recovery: false }, //懊悩の状態
+                    quagmireA: { remainingTurns: 0, recovery: false }, //足止の状態
+                    quagmireB: { remainingTurns: 0, recovery: false }, //泥沼の状態
+                    quagmireC: { remainingTurns: 0, recovery: false }, //停滞の状態
+                    slumpA: { remainingTurns: 0, recovery: false }, //不調の状態
+                    slumpB: { remainingTurns: 0, recovery: false }, //不遇の状態
+                    slumpC: { remainingTurns: 0, recovery: false }, //不発の状態
+                    ominousA: { remainingTurns: 0, recovery: false }, //不吉の状態
+                    ominousB: { remainingTurns: 0, recovery: false }, //不運の状態
+                    ominousC: { remainingTurns: 0, recovery: false }, //魔凶の状態
+                    paralysisA: { remainingTurns: 0, recovery: false }, //麻痺の状態
+                    paralysisB: { remainingTurns: 0, recovery: false }, //呪縛の状態
+                    paralysisC: { remainingTurns: 0, recovery: false }, //石化の状態
+                    panicA: { remainingTurns: 0, recovery: false }, //混乱の状態
+                    panicB: { remainingTurns: 0, recovery: false }, //凶器の状態
+                    panicC: { remainingTurns: 0, recovery: false }, //魅了の状態
+                    deadly: { remainingTurns: 0, recovery: false }, //致命の状態
+                    sealed: { remainingTurns: 0, recovery: false }, //封印の状態
+                    darkness: { remainingTurns: 0, recovery: false }, //暗闇の状態
+                    ecstasy: { remainingTurns: 0, recovery: false }, //恍惚の状態
+                    anger: { remainingTurns: 0, recovery: false }, //怒りの状態
+                    pressure: { remainingTurns: 0, recovery: false }, //重圧の状態
+                    impossible: { remainingTurns: 0, recovery: false }, //無策の状態
                     // 他のBS（例えば睡眠など）もここに追加可能
                 };
 
@@ -451,34 +492,28 @@
             // 呪い以外の自然回復処理
             allbas() {
 
-                if (this.badStatus.poisonA.remainingTurns > 0) {
-                    // 毒ダメージ: 毎ターンHPの1%を失うが、最小50、最大200まで
-                    let damage = Math.max(50, Math.min(200, Math.floor(this.hp * 0.01)));
-                    this.hp -= damage;
-                    this.hp = Math.max(0, this.hp); // HPが0以下にならないように
-                    this.badStatus.poisonA.remainingTurns--;
-                    log(`${this.name}は毒により${damage}ダメージを受けた！（残りターン: ${this.badStatus.poisonA.remainingTurns}）`);
+                    for (let statusKey in this.badStatus) {
+                        let status = this.badStatus[statusKey];
 
-                    // 毒が残りターン0になると回復する
-                    if (this.badStatus.poisonA.remainingTurns === 0) {
-                        this.badStatus.poisonA.recovery = true;
-                        log(`${this.name}の毒が治癒しました！`);
-                    }
-                }
-                if (this.badStatus.poisonB.remainingTurns > 0) {
-                    // 猛毒ダメージ: 毎ターンHPの2%を失うが、最小100、最大400まで
-                    let damage = Math.max(100, Math.min(400, Math.floor(this.hp * 0.02)));
-                    this.hp -= damage;
-                    this.hp = Math.max(0, this.hp); // HPが0以下にならないように
-                    this.badStatus.poisonB.remainingTurns--;
-                    log(`${this.name}は猛毒により${damage}ダメージを受けた！（残りターン: ${this.badStatus.poisonB.remainingTurns}）`);
+                        // 残りターンが0より大きい場合にダメージ処理
+                        if (status.remainingTurns > 0) {
+                            let damage = Math.max(status.damage.minDamage, Math.min(status.damage.maxDamage, Math.floor(this.hp * status.damage.percentage)));
+                            this.hp -= damage;
+                            this.hp = Math.max(0, this.hp); // HPが0以下にならないように
 
-                    // 猛毒が残りターン0になると回復する
-                    if (this.badStatus.poisonB.remainingTurns === 0) {
-                        this.badStatus.poisonB.recovery = true;
-                        log(`${this.name}の猛毒が治癒しました！`);
+                            status.remainingTurns--; // 残りターンを減らす
+
+                            // ログに出力
+                            log(`${this.name}は${status.bsname}により${damage}ダメージを受けた！（残りターン: ${status.remainingTurns}）`);
+
+                            // 残りターンが0になった場合、回復フラグを立てる
+                            if (status.remainingTurns === 0) {
+                                status.recovery = true;
+                                log(`${this.name}の${status.bsname}が治癒しました！`);
+                            }
+                        }
                     }
-                }
+                
                 
                 if (this.hp <= 0) {
                     let dramaChance = Math.random() * 100;
